--- a/src/input.css
+++ b/src/input.css
@@ -184,16 +184,24 @@ body {
 }
 
 /* Change background color of buttons on hover */
+.tab-box{
+  height: fit-content;
+  width: 112.6rem;
+  border-width: 2em 0.3em 1.5em 0.3em;
+  border-color: #555555;
+}
 .tab button:hover {
-  background-color: #9E9E9E;
+  background-color: #1e1e1e;
 }
 
 /* Create an active/current tablink class */
 .tab button.active {
-  background-color: #9E9E9E;
+  background-color: #1e1e1e;
 }
 
 .tablinks {
+  height: 7rem;
+  width: 14rem;
   background-color: #9E9E9E;
   color: #1e1e1e;
   border: none;
@@ -201,21 +209,48 @@ body {
   cursor: pointer;
   padding: 14px 16px;
   transition: 0.3s;
-  font-size: 24px;
+  font-size: 2rem;
+  /* font-weight: 600; */
 }
 
-.tablinks:active {
+.tablinks:hover {
+  background-color: #1e1e1e;
+  border-top: 0.15em solid #9E9E9E;
+}
+
+/* .tablinks:active {
   background-color: #1e1e1e;
   color: #fff;
+} */
+
+.tablinks:focus {
+  background-color: #1e1e1e;
+  color: #fff;
+  border-top: 0.15em solid #9E9E9E;
 }
+/* 
+.tablinks:visited {
+  background-color: #1e1e1e;
+  color: #fff;
+} */
 
 /* Style the tab content */
 .tabcontent {
   display: none;
-  padding: 6px 12px;
+  width: 105rem;
+  color: #D9D9D9;
+  /* padding: 6px 12px; */
   border-top: none;
   background-color: #1e1e1e;
-  border: 2px solid #9e9e9e;
+  /* border: 2px solid #9e9e9e; */
+}
+
+.tabcontent p {
+  font-size: 1.5rem;
+}
+
+@media (max-width: 1369px) {
+  
 }
 
 @media (max-width: 639px) {
