--- a/src/input.css
+++ b/src/input.css
@@ -1,8 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-/* 
-* { 
+
+/* * { 
   outline: 1px solid red;
   outline-offset: -1px;
 } */
@@ -12,258 +12,24 @@ body {
   color: #FFFFFF;
 }
 
-/* code pen */
-
-
-
-.heading1 {
-  color: #CCCC6C;
+*, html {
+  scroll-behavior: smooth !important;
 }
 
-.heading2 {
-  color: #50BE62;
+/* preloader gif */
+#preloader {
+  background: #1E1E1E url("../assets/start.gif") no-repeat center center;
+  height: 100vh;
+  background-size: 15%;
+  width: 100%;
+  position: fixed;
+  z-index: 100;
 }
 
-.heading3 {
-  color: #6164AD;
-}
-
-.heading4 {
-  color: #CD3838;
-}
-
-.elementheading{
-  width: 12 rem;
-}
-
-/* .faq-section {
-  padding: 4em 3em 2em 3em;
-  display: flex;
-  justify-content: space-around;
-  align-items: flex-start;
-  flex-direction: column;
-}
-
-.faq-title {
-  padding: 0.5em 0;
+#loadingText{
+  position:fixed;
   font-size: 3rem;
-  color: #9E9E9E;
-}
-
-.faq-title span {
-  color: #fff;
-}
-
-.faq-container {
-  height: fit-content;
-  width: 97%;
-  background-color: #2e2e2e;
-  padding: 0.1em 2em 0.5em 2em;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  font-family: 'VT323', monospace;
-}
-
-.faq-header {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: flex-start;
-  flex-wrap: wrap;
-}
-
-.faq-heading {
-  font-size: 2.25rem;
-  color: #E87D3E;
-}
-
-.terminate-icon {
-  padding: 1em 0 0 0;
-}
-
-.faq-list {
-  list-style: none;
-  padding: 0;
-  font-size: 1.5rem;
-}
-
-.faq {
-  padding-bottom: 1em;
-}
-
-.faq-collapsible {
-  padding: 0;
-  border: none;
-  background: none;
-  display: flex;
-  flex-direction: row-reverse;
-  font-family: 'VT323', monospace;
-  font-size: 1.75rem;
-  color: #ffffff;
-}
-
-.active, .faq-collapsible:hover {
-  color: #fff;
-}
-
-.faq-collapsible:after {
-  content: '[+]';
-  color: #E5B567;
-  font-weight: 400;
-  padding-right: 1em;
-  /* transform: all -1ms ease-out; */
-/* }
-
-.faq-collapsible.active:after {
-  content: '[-]';
-  color: #169B81;
-  transform: all 0ms ease-in-out;
-
-}
-
-.faq-content {
-  padding: 0 1.2em 0 3em;
-  color: #fff;
-  text-align: justify;
-  overflow: hidden;
-  max-height: 0;
-  transition: max-height 0.2s ease-in-out;
-}
-
-
-@media screen and (max-width: 767px) {
-  .faq-title{
-    font-size: 1.5rem;
-  }
-
-  .faq-section {
-    padding: 2em 3em 2em 1.5em;
-  }
-
-  .faq-container {
-    width: 104%;
-    padding: 0.5em 2em 0.5em 1em;
-  }
-
-  .faq-heading {
-    font-size: 1.27rem;
-  }
-
-  .terminate-icon {
-    display: none;
-  }
-
-  .faq-collapsible {
-    font-size: 1rem;
-  }
-
-  .faq {
-    font-size: 1rem;
-  }
-} */
-
-/* Style the tab */
-.tab {
-  overflow: hidden;
-  border: 1px solid #ccc;
-  background-color: #1e1e1e;
-  flex-basis: 10rem;
-}
-
-/* Style the buttons inside the tab */
-.tab button {
-  background-color: inherit;
-  float: left;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  padding: 14px 16px;
-  transition: 0.3s;
-  font-size: 17px;
-}
-
-/* Change background color of buttons on hover */
-.tab-box{
-  height: fit-content;
-  width: 112.6rem;
-  border-width: 2em 0.3em 1.5em 0.3em;
-  border-color: #555555;
-}
-.tab button:hover {
-  background-color: #1e1e1e;
-}
-
-/* Create an active/current tablink class */
-.tab button.active {
-  background-color: #1e1e1e;
-}
-
-.tablinks {
-  height: 7rem;
-  width: 14rem;
-  background-color: #9E9E9E;
-  color: #1e1e1e;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  padding: 14px 16px;
-  transition: 0.3s;
-  font-size: 2rem;
-  /* font-weight: 600; */
-}
-
-.tablinks:hover {
-  background-color: #1e1e1e;
-  border-top: 0.15em solid #9E9E9E;
-}
-
-/* .tablinks:active {
-  background-color: #1e1e1e;
-  color: #fff;
-} */
-
-.tablinks:focus {
-  background-color: #1e1e1e;
-  color: #fff;
-  border-top: 0.15em solid #9E9E9E;
-}
-/* 
-.tablinks:visited {
-  background-color: #1e1e1e;
-  color: #fff;
-} */
-
-/* Style the tab content */
-.tabcontent {
-  display: none;
-  width: 105rem;
-  color: #D9D9D9;
-  /* padding: 6px 12px; */
-  border-top: none;
-  background-color: #1e1e1e;
-  /* border: 2px solid #9e9e9e; */
-}
-
-.tabcontent p {
-  font-size: 1.5rem;
-}
-
-@media (max-width: 1369px) {
-  
-}
-
-@media (max-width: 639px) {
-  .flex-wrap {
-    flex-wrap: nowrap;
-    overflow-x: scroll;
-    overflow-y: hidden;
-    -webkit-overflow-scrolling: touch;
-    scrollbar-width: none;
-    margin-bottom: 1rem;
-  }
-
-  .flex-wrap::-webkit-scrollbar {
-    display: none;
-  }
+  top: 70%;
+  width: 100%;
+  text-align: center;
 }
